--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,10 @@
     "skipLibCheck": true,
     "esModuleInterop": true,
     "strictNullChecks": false,
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "noImplicitAny": false,
+    "strictBindCallApply": false,
+    "forceConsistentCasingInFileNames": false,
+    "noFallthroughCasesInSwitch": false,
   },
 }
