--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,13 +1,11 @@
 upstream backend {
-    server app1:3017;
-    server app2:3018;
+    server server1:3017;
+    server server2:3018;
     # Add more server entries for additional instances
   }
-
   server {
     listen 80;
-
     location / {
       proxy_pass http://backend;
-    }
+  }
 }
