fix: some error

--- a/nginx/loadbalancing-server.conf
+++ b/nginx/loadbalancing-server.conf
@@ -1,7 +1,11 @@
 upstream backend {
-      server 172.17.0.1:3017;
-      server 172.17.0.1:3018;
-      # Add more server entries for additional instances
+  # least_conn
+  # hash $http_session_id consistent
+  # ip_hash
+  server 172.17.0.1:3017;
+  # weight=2
+  server 172.17.0.1:3018;
+  # Add more server entries for additional instances
 }
 server {
   listen 80;
