--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -6,7 +6,9 @@ pid        /var/run/nginx.pid;
 
 
 events {
-    worker_connections  1024;
+    worker_connections  4000;
+    use epoll;
+    multi_accept on;
 }
 
 http {
@@ -22,6 +24,10 @@ http {
     sendfile        on;
 
     keepalive_timeout  65;
+
+    send_timeout 25;
+
+    reset_timedout_connection on;
 
     include /etc/nginx/conf.d/*.conf;
 }
