--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/swagger": "^5.2.1",
     "@sendgrid/mail": "^7.7.0",
+    "@trycourier/courier": "^4.7.0",
     "@types/jsonwebtoken": "^8.5.8",
     "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
